--- a/ReimbursementsApp/src/main/resources/frontend/index.html
+++ b/ReimbursementsApp/src/main/resources/frontend/index.html
@@ -21,10 +21,11 @@
     <input type="email" class="form-control form-control-lg" style="margin: 2px;" id="email-input" placeholder="E-Mail">
     <input type="text" class="form-control form-control-lg" style="margin: 2px;" id="username-input" placeholder="Username"/>
     <input type="password" class="form-control form-control-lg" style="margin: 2px;" id="password-input" placeholder="Password">
-    <button type="submit" class="btn btn-primary btn-lg" style="margin: 2px; justify-items:center;" id="login-btn">Login</button>
+    <button type="submit" class="btn btn-primary btn-lg" style="margin: 2px; justify-items:center; width: 100%;" id="login-btn">Login</button>
 </form>
     <h4 class="text" style="color: red;" id="error-msg"></h4>
 </div>
+    <script src="./globals/globals.js"></script>
     <script src="./script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
